--- a/src/components/Card/NewCard.module.css
+++ b/src/components/Card/NewCard.module.css
@@ -1,12 +1,16 @@
 .content {
   position: relative;
+
+  min-height: var(--card-min-height);
   height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .frontText {
-  position: absolute;
-  top: 14px;
-
   font-size: 12px;
   font-weight: 400;
 }
@@ -19,14 +23,15 @@
 }
 
 .input {
-  position: absolute;
-  top: 36px;
+  margin-top: 36px;
 }
 
 .actions {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+
+  margin-top: 14px;
+
   display: flex;
+  justify-content: end;
   gap: 7px;
 }
