--- a/src/components/UI/CardWrapper.module.css
+++ b/src/components/UI/CardWrapper.module.css
@@ -1,6 +1,4 @@
 .card {
-  height: 188px;
-
   padding: 14px;
   margin: 12px 16px 0;
 
